# model-forge

./: .gitignore  docker-compose.yml
.devcontainer/all/: devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.devcontainer/trainer/: devcontainer.json
.github/: ISSUE_TEMPLATE
backend/: Dockerfile  README.md  alembic.ini  requirements.txt
backend/app/: database.py  main.py
backend/app/crud/: dataset.py  model.py  project.py
backend/app/models/: __init__.py  dataset.py  model.py  project.py  trainig_job.py  training_job.py
backend/app/routers/: dataset.py  model.py  project.py
backend/app/schemas/: dataset.py  model.py  project.py
backend/migrations/: README  env.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  NewProject.jsx  ProjectTable.jsx  index.css  main.jsx  navbar.jsx  routes.tsx  sidebar.jsx  step1.jsx  step4.jsx  step5.jsx
frontend/src/components/: action-card.tsx  app-sidebar.tsx  chart-bar-default.tsx  (+14 more)
inference/: .gitignore  Dockerfile
inference/app/: database.py  main.py  models.py
libforge/: pyproject.toml
libforge/src/libforge/datasets/: __init__.py
libforge/src/libforge/models/: __init__.py  tasks.py
libforge/tests/: test_datasets.py
modelserve/: Dockerfile  requirements.txt
modelserve/app/: main.py
scripts/: add_model.sh
telemetry/: config.yaml
trainer/: Dockerfile  requirements.txt
trainer/app/: __init__.py  celery_app.py  config.py
trainer/scripts/: tabular_classification_random_forest.py
(+46 files in other folders)
