[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libforge"
version = "1.0"
requires-python = ">= 3.13"
dependencies = [
  "sqlalchemy",
  "sqlmodel",
  "pydantic",
  "alembic"
]

[project.optional-dependencies]


[tool.black]
line-length = 88

[tool.pytest]
testpaths = ["tests"]